--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,6 +112,8 @@ nav {
       margin-bottom: 10px; }
     #section-about a:hover .fa {
       color: #ffff00; }
+    #section-about a:link .fa {
+      color: #fff; }
 
 #section-coating {
   background: url("../img/img-56.jpg") no-repeat 100% 100%;
@@ -122,6 +124,8 @@ nav {
     color: #fff !important; }
   #section-coating h3 {
     color: #aaa; }
+  #section-coating p {
+    font-size: 12px; }
   #section-coating .why-coating-box {
     color: #fff;
     padding: 10px;
@@ -214,9 +218,23 @@ nav {
     font-size: 15px; }
 
 #section-footer {
-  background: #2a2a2a; }
+  background: #2a2a2a;
+  font-family: Arial, sans-serif;
+  font-size: 12px; }
   #section-footer p {
     color: #fff; }
+  #section-footer a {
+    color: #fff; }
+    #section-footer a:hover {
+      text-decoration: none; }
+  #section-footer .card {
+    transition: all 200ms linear;
+    -webkit-transition: all 200ms linear;
+    -moz-transition: all 200ms linear; }
+    #section-footer .card:hover {
+      background-color: #6ce88c !important; }
+    #section-footer .card .fa {
+      font-size: 40px; }
   #section-footer input[type="text"] {
     background: #333;
     color: #ccc; }
