--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,8 @@ nav{
 	padding-bottom: 10px !important;
 }
 
+
+
 .navbar{
   // background-color: rgba(26, 94, 113, 0.56);
   background-color: rgba(0, 0, 0, 0.66);
@@ -175,6 +177,11 @@ nav{
         color: $yellow;
       }
     }
+    &:link{
+      .fa{
+        color: #fff ;
+      }
+    }
   }
 }
 
@@ -189,6 +196,9 @@ nav{
 	h3{
 		color: #aaa;
 	}
+  p{
+    font-size: 12px;
+  }
 
   .why-coating-box{
     color: #fff;
@@ -300,9 +310,26 @@ nav{
 
 #section-footer{
 	background: #2a2a2a;
+  font-family: Arial, sans-serif;
+  font-size: 12px;
 	p{
 		color: #fff;
 	}
+  a{
+    color: #fff;
+    &:hover{
+            text-decoration: none;
+    }
+  }
+  .card{
+    &:hover{
+      background-color: #6ce88c !important;
+    }
+    .fa{
+      font-size: 40px;
+    }
+    @include transition(all, 200ms);
+  }
 	input[type="text"] {
 		background: #333;
 		color: #ccc;
